toggle and animation setup

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- TODO can remove after test -->
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script>
+      TweenMax.from('.animation_box_one', 2, { ease: Bounce.easeOut, y: -150, ease: Bounce
+      .easeOut, x: -150})
+    </script> -->
+
+
   </body>
 </html>
