--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,16 @@
       .easeOut, x: -150})
     </script> -->
 
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>  
 
+    <!-- <script type="text/javascript">  
+    var myWidget = cloudinary.createUploadWidget({
+    cloudName: 'dzyljunq0', 
+    uploadPreset: 'pzerapqx'}, (error, result) => { console.log(error, result) })
+
+    document.getElementById("upload_widget").addEventListener("click", function(){
+    myWidget.open();
+  }, false);
+  </script> -->
   </body>
 </html>
